--- a/ппа.html
+++ b/ппа.html
@@ -1,4 +1,4 @@
-<html lang="ru">
+<html lang="eng">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
